# digitaleditz

./: Readme.md  docker-compose.yml  test.html
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  backend.rar  jwt_debug.py  pyproject.toml  requirements.txt  run.py  twiliosms.py
backend/api/: Faq_router.py  __init__.py  admin_router.py  auth_router.py  chat_router.py  demo_router.py  help_router.py  inventory_router.py  notification_router.py  payment_router.py  upload_router.py  user_router.py  whatsapp.py  workflow_router.py
backend/app/: __init__.py  inventory_router.py  user_router.py
backend/auth/: __init__.py
backend/config/: __init__.py
backend/database/: mongo.py
backend/middleware/: middleware.py
backend/models/help/: query.py
backend/models/inventory/: inventory.py
backend/models/payment/: payment.py
backend/models/user/: customer.py  user.py
backend/models/workflow/: events.py  workflow.py
backend/permission/: __init__.py
backend/services/auth/: auth_utils.py  verify_email.py
backend/services/auth/templates/: verify_email.html
backend/services/execution/: execution.py
backend/services/help/: ticket.py
backend/services/inventory/: inventory.py
backend/services/message/: message.py
backend/services/payment/: payment.py
backend/services/user/: user.py
backend/services/workflow/: main.py  workflow.py
backend/storage/: README.md
backend/utils/: __init__.py  s3.py  sample_pfp.py
chatbot/: Dockerfile  components.json  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+254 files in other folders)
