[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nimar",email = "104978201+0nimar@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis (==2.0.0)",
    "pymongo (>=4.11.2,<5.0.0)",
    "mongoose (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
